<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">OpenMiDaS</string>
    <string name="title_activity_main" translatable="false">OpenMiDaS</string>
    <string name="subtitle" translatable="false">Edge-based Monocular Depth Estimation</string>

    <!-- activity_serverlist.xml -->
    <string name="pref_title_recording">Show Screenshot/Recording Buttons</string>
    <string name="show_fps">Display FPS</string>
    <string name="serverlist_heading">Server List</string>
    <string name="name_hint">Server Name</string>
    <string name="address_hint" translatable="false">10.0.0.2[:9099]</string>
    <string name="backend_instructions">OpenScout requires a backend server to connect to. The cmu-demo-server can be used to test. You can setup your own backend server by following the instructions at https://github.com/cmusatyalab/openscout to launch the cmusatyalab/openscout Docker container.</string>
    <string name="error_empty">Name and address are required.</string>
    <string name="error_invalidURI">Server address is an invalid URI.</string>
    <string name="error_exists">A server by that name already exists.</string>
    <string name="server_removed">Removed server: </string>
    <string name="server_kept">Server retained.</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="error_button">Return to Server List</string>
    <string name="error_title">Connection Error</string>
    <string name="error_message">There was an error connecting to the server. Please check the URL. ERROR: %s</string>
    <string name="recording_complete">Video snippet saved to %s!</string>
    <string name="screenshot_taken">Screenshot saved to %s!</string>

    <string name="demo_server">cmu-demo-server</string>
    <string name="demo_dns">openmidas-demo.cmusatyalab.org</string>

    <string name="about_menu">About&#8230;</string>
    <string name="settings_menu">Settings&#8230;</string>
    <string name="about_title" translatable="false">OpenMiDaS: Edge-based Monocular Depth Estimation</string>
    <string name="about_message" translatable="false">Client ID: %s\nVersion: %s\nCopyright &#169; 2023\nCarnegie Mellon University\nThis is a developing project.\n\nAll source code and documentation are under the GNU Public License, Version 2.0.</string>


    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_ui">UI</string>

    <string name="pref_title_token_limit">Gabriel Token Limit</string>
    <string name="token_limit_summary">Controls how many frames can be in flight to Gabriel server</string>
    <string-array name="pref_token_list_titles">
        <item>No limit</item>
        <item>1 frame</item>
        <item>2 frames</item>
        <item>3 frames</item>
        <item>4 frames</item>
        <item>5 frames</item>
    </string-array>
    <string-array name="pref_token_list_values">
        <item>None</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="pref_title_resolution">Camera Resolution</string>
    <string-array name="pref_resolution_titles">
        <item>320x240 px</item>
        <item>640x480 px</item>
        <item>1280x720 px</item>
    </string-array>
    <string-array name="pref_resolution_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_title_model">MiDaS Model</string>
    <string-array name="pref_model_titles">
        <item>DPT_BEiT_L_512</item>
        <item>DPT_BEiT_L_384</item>
        <item>DPT_BEiT_384</item>
        <item>DPT_SwinV2_L_384</item>
        <item>DPT_SwinV2_B_384</item>
        <item>DPT_SwinV2_T_256</item>
        <item>DPT_Swin_L_384</item>
        <item>DPT_Next_ViT_L_384</item>
        <item>DPT_LeViT_224</item>
        <item>DPT_Large</item>
        <item>DPT_Hybrid</item>
        <item>MiDaS</item>
        <item>MiDaS_small</item>
    </string-array>
    <string-array name="pref_model_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="pref_title_colormap">Colormap</string>
    <string name="colormap_summary">Colormap used to indicate relative depth. Corresponds to OpenCVs enumerations for Colormaps.</string>
    <string-array name="pref_colormap_titles">
        <item>Autumn</item>
        <item>Bone</item>
        <item>Jet</item>
        <item>Winter</item>
        <item>Rainbow</item>
        <item>Ocean</item>
        <item>Summer</item>
        <item>Spring</item>
        <item>Cool</item>
        <item>HSV</item>
        <item>Pink</item>
        <item>Hot</item>
        <item>Parula</item>
        <item>Magma</item>
        <item>Inferno</item>
        <item>Plasma</item>
        <item>Viridis</item>
        <item>Cividis</item>
        <item>Twilight</item>
        <item>Twilight Shifted</item>
        <item>Turbo</item>
        <item>Deep Green</item>
    </string-array>
    <string-array name="pref_colormap_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
    </string-array>


</resources>
